--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 80,
    "id": "74d4bdd4",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 81,
    "id": "f873eb95",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 82,
    "id": "43060e44",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 83,
    "id": "d21b86f7",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 84,
    "id": "2a4b5a68",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 85,
    "id": "ed0aaf7b",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 86,
    "id": "38749db8",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
     "                diff = X - self.means[k] \n",
     "\n",
     "                #Se calculan las covarianzas\n",
-    "                self.covariances[k] = (self.resp[:, k].reshape(-1, 1) * diff).T @ diff / Nk[k] #\n",
+    "                self.covariances[k] = (self.resp[:, k].reshape(-1, 1) * diff).T @ diff / Nk[k] \n",
     "            \n",
     "\n",
     "            #Se obtiene la log-verosimilitud, es decir, la suma de los logaritmos de las probabilidades condicionales\n",
@@ -457,6 +457,14 @@
     "\n",
     "\n",
     "\n",
+    "    ########################################################## fit + predict\n",
+    "    def fit_predict(self, X) : \n",
+    "        self.fit(X)\n",
+    "        return self.predict(X)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
     "    ########################################################## Función que calcula función de densidad de una Gaussiana Multivariable\n",
     "    def multivariate_normal_pdf(self, x, mean, cov):\n",
     "\n",
@@ -488,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 87,
    "id": "c28d4460",
    "metadata": {},
    "outputs": [
@@ -498,7 +506,7 @@
        "Text(0.5, 1.0, 'Fronteras de decisión - Modelo EM')"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -569,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 88,
    "id": "e3c27157",
    "metadata": {},
    "outputs": [],
@@ -638,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 89,
    "id": "b368118b",
    "metadata": {},
    "outputs": [
@@ -664,7 +672,6 @@
     "\n",
     "x_tr2 = model.fit_transform(X,k=1)\n",
     "\n",
-    "\n",
     "print(x_tr.shape)\n",
     "print(x.shape)\n",
     "print(x_tr2.shape)"
@@ -675,7 +682,60 @@
    "id": "d9250b4d",
    "metadata": {},
    "source": [
-    "## Graficos "
+    "## Entrenamiento y valores extremos de la proyección"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d90b5648",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cluster: 0 --> min=-0.2919254436832528            max = 0.2732653609103336\n",
+      "cluster: 1 --> min=-0.5327287322703376            max = 0.39534549821873133\n",
+      "cluster: 2 --> min=-0.40478682064204013            max = 0.3797641691117349\n",
+      "cluster: 3 --> min=-0.17493856043465267            max = 0.1836449072929478\n",
+      "cluster: 4 --> min=-0.3424863841256364            max = 0.48857331725456105\n",
+      "(5, 1)\n",
+      "(5, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Separación en clusters con EM\n",
+    "em_model = EM (n_clusters= 5)\n",
+    "y_pred = em_model.fit_predict(X)\n",
+    "\n",
+    "\n",
+    "#Se entrena un PCA para cada cluster\n",
+    "pcas = []\n",
+    "for k in range(em_model.n_clusters):\n",
+    "    X_k = X[y_pred == k] \n",
+    "    pca_k = PCA() \n",
+    "    pca_k.fit(X_k)\n",
+    "    pcas.append(pca_k)\n",
+    "\n",
+    "#Se obtienen los valores extremos de la proyección sobre la recta\n",
+    "mins=[]\n",
+    "maxs= []\n",
+    "\n",
+    "for k, pca_k in enumerate(pcas):\n",
+    "    X_k = X[y_pred == k]\n",
+    "    proj = pca_k.transform(X_k,k =1) #Proyección 1D\n",
+    "    mins.append(proj.min())\n",
+    "    maxs.append(proj.max())\n",
+    "    print(f'cluster: {k} --> min={mins[k]}            max = {maxs[k]}')\n",
+    "\n",
+    "mins=np.array(mins,ndmin = 2).T\n",
+    "maxs=np.array(maxs,ndmin = 2).T\n",
+    "\n",
+    "\n",
+    "print(mins.shape)\n",
+    "print(maxs.shape)\n"
    ]
   }
  ],
