--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "id": "74d4bdd4",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "id": "f873eb95",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "id": "43060e44",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "id": "d21b86f7",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "id": "2a4b5a68",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 96,
    "id": "ed0aaf7b",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 97,
    "id": "38749db8",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 98,
    "id": "c28d4460",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        "Text(0.5, 1.0, 'Fronteras de decisión - Modelo EM')"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 99,
    "id": "e3c27157",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 100,
    "id": "b368118b",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 101,
    "id": "d90b5648",
    "metadata": {},
    "outputs": [
@@ -699,9 +699,18 @@
       "cluster: 1 --> min=-0.5327287322703376            max = 0.39534549821873133\n",
       "cluster: 2 --> min=-0.40478682064204013            max = 0.3797641691117349\n",
       "cluster: 3 --> min=-0.17493856043465267            max = 0.1836449072929478\n",
-      "cluster: 4 --> min=-0.3424863841256364            max = 0.48857331725456105\n",
-      "(5, 1)\n",
-      "(5, 1)\n"
+      "cluster: 4 --> min=-0.3424863841256364            max = 0.48857331725456105\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[101]\u001b[39m\u001b[32m, line 28\u001b[39m\n\u001b[32m     23\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mcluster: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m --> min=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmins[k]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m            max = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmaxs[k]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# mins=np.array(mins,ndmin = 2).T\u001b[39;00m\n\u001b[32m     26\u001b[39m \u001b[38;5;66;03m# maxs=np.array(maxs,ndmin = 2).T\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmins\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m)\n\u001b[32m     29\u001b[39m \u001b[38;5;28mprint\u001b[39m(maxs.shape)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'list' object has no attribute 'shape'"
      ]
     }
    ],
@@ -730,12 +739,15 @@
     "    maxs.append(proj.max())\n",
     "    print(f'cluster: {k} --> min={mins[k]}            max = {maxs[k]}')\n",
     "\n",
-    "mins=np.array(mins,ndmin = 2).T\n",
-    "maxs=np.array(maxs,ndmin = 2).T\n",
-    "\n",
+    "# mins=np.array(mins,ndmin = 2).T\n",
+    "# maxs=np.array(maxs,ndmin = 2).T\n",
     "\n",
     "print(mins.shape)\n",
-    "print(maxs.shape)\n"
+    "print(maxs.shape)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
