--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "d90b5648",
    "metadata": {},
    "outputs": [
@@ -739,8 +739,8 @@
     "    maxs.append(proj.max())\n",
     "    print(f'cluster: {k} --> min={mins[k]}            max = {maxs[k]}')\n",
     "\n",
-    "# mins=np.array(mins,ndmin = 2).T\n",
-    "# maxs=np.array(maxs,ndmin = 2).T\n",
+    "mins=np.array(mins,ndmin = 2).T\n",
+    "maxs=np.array(maxs,ndmin = 2).T\n",
     "\n",
     "print(mins.shape)\n",
     "print(maxs.shape)\n",
