--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 1,
    "id": "74d4bdd4",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 2,
    "id": "f873eb95",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 3,
    "id": "43060e44",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 4,
    "id": "d21b86f7",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 5,
    "id": "2a4b5a68",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 6,
    "id": "ed0aaf7b",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 7,
    "id": "38749db8",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 8,
    "id": "c28d4460",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        "Text(0.5, 1.0, 'Fronteras de decisión - Modelo EM')"
       ]
      },
-     "execution_count": 491,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 9,
    "id": "e3c27157",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 10,
    "id": "b368118b",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 11,
    "id": "d90b5648",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": null,
    "id": "47f8be7d",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,10 @@
     "plt.xlabel(r'$\\text{X}_1$')\n",
     "plt.ylabel(r'$\\text{X}_2$')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "#probandoando"
    ]
   }
  ],
