--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -96,7 +96,7 @@
     "X = G + 0.05 * Z\n",
     "\n",
     "\n",
-    "#Normalización de los datos\n",
+    "#Se normalizan los datos\n",
     "means = np.mean(X, axis=0)\n",
     "stds = np.std(X, axis=0)\n",
     "\n",
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "#Generación del Manifold M\n",
+    "#Se genera el Manifold\n",
     "u = np.linspace(0, 1, 200)\n",
     "M = np.array([g(k) for k in u])\n",
     "\n",
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "e3c27157",
    "metadata": {},
    "outputs": [],
@@ -641,18 +641,24 @@
     "        #Normalizacion de datos\n",
     "        X_centered = X - self.mean\n",
     "\n",
-    "        w = self.eig_vecs[:, :k] #Se toman los primeros k autovectores\n",
+    "        #Se toman los primeros k autovectores\n",
+    "        w = self.eig_vecs[:, :k]\n",
     "\n",
-    "        X_transformed = X_centered @ w #Se calculan los datos transformados\n",
+    "        #Se calculan los datos transformados\n",
+    "        X_transformed = X_centered @ w \n",
     "\n",
     "        return X_transformed\n",
     "\n",
     "\n",
     "    def inverse_transform(self, U, k=1):\n",
+    "\n",
+    "        #Se toman los primeros k autovectores\n",
     "        w = self.eig_vecs[:, :k]\n",
-    "        X_rec = U @ w.T\n",
+    "\n",
+    "        #Se obtienen los ratos reconstruidos\n",
+    "        X_r = U @ w.T\n",
     "        \n",
-    "        return X_rec + self.mean\n",
+    "        return X_r + self.mean\n",
     "\n",
     "\n",
     "    #### fit+transform\n",
