--- a/TPs/TP8/TP8_SARMIENTO_104241.ipynb
+++ b/TPs/TP8/TP8_SARMIENTO_104241.ipynb
@@ -1,22 +1,70 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "94f8fde9",
+   "metadata": {},
+   "source": [
+    "# TP8 - Modelos de lenguaje y sistemas de recomendación"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "5bc784e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\solek\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#librerias\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from sentence_transformers import SentenceTransformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c30cb410",
+   "metadata": {},
+   "source": [
+    "# Exploración del dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4bd7f20f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Funciones\n",
+    "\n",
+    "def processing_text (text):\n",
+    "\n",
+    "    #Se separan las palabras por espacios\n",
+    "    words_list = text.split() \n",
+    "\n",
+    "    #Se concatenan las palabras agregando un único espacio\n",
+    "    text_unified = \" \".join(words_list) \n",
+    "\n",
+    "    #Se pasan los caracteres a minuscula\n",
+    "    text.lower()\n",
+    "\n",
+    "    return text_unified\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "239b8b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'anime.csv'\n",
+    "df = pd.read_csv(filename)\n",
+    "\n",
+    "language_model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-mpnet-base-v2')\n",
+    "\n"
    ]
   }
  ],
