--- a/TPs/TP8/TP8_SARMIENTO_104241.ipynb
+++ b/TPs/TP8/TP8_SARMIENTO_104241.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "4bd7f20f",
    "metadata": {},
    "outputs": [],
@@ -50,12 +50,13 @@
     "    #Se pasan los caracteres a minuscula\n",
     "    text.lower()\n",
     "\n",
-    "    return text_unified\n"
+    "    return text_unified\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "239b8b50",
    "metadata": {},
    "outputs": [],
@@ -63,8 +64,7 @@
     "filename = 'anime.csv'\n",
     "df = pd.read_csv(filename)\n",
     "\n",
-    "language_model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-mpnet-base-v2')\n",
-    "\n"
+    "language_model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-mpnet-base-v2')"
    ]
   }
  ],
