correcciones teoricas tp7

--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -113,7 +113,7 @@
    "id": "22b78cc3",
    "metadata": {},
    "source": [
-    "## Gráficos de los datos y curva representativa del manifold M"
+    "## Gráficos de los datos y curva representativa del Manifold M"
    ]
   },
   {
@@ -313,7 +313,25 @@
    "metadata": {},
    "source": [
     "Pregunta:\n",
-    "Dado que kmeans separa los clusters por cercanía (distancia euclidea) la distribución de los mismos siguen una distribución circular (o esférica en R3). Dado que en este caso, el Manifold es principalmente lineal, la distribución por clusters, no tiene sentido como tal. Es por eso que más adelante, el algoritmo EM, permita tener una distribución más lineal de los clusters, mejorando en dicho aspecto.\n"
+    "Dado que kmeans separa los clusters por cercanía (distancia euclidea) la distribución de los mismos siguen una distribución circular (o esférica en R3). Dado que en este caso, el Manifold es principalmente lineal, la distribución por clusters, no tiene sentido como tal, la geometría del Manifold, no coincide con la geometría utilizada para la separación de los clusters.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ccf8837",
+   "metadata": {},
+   "source": [
+    "## Sobre el algoritmo K-Means\n",
+    "\n",
+    "Dicho algoritmo, tiene como objetivo agrupar datos en grupos semejantes entre sí.\n",
+    "\n",
+    "Con este fin, de agrupar datos según su similitud, comienza determinando K centroides de forma aleatoria, luego, calcula las distancias de cada uno de los datos a cada uno de los centroides y se queda con la distancia mínima de ellas, determinando de esta manera el centroide más cercano al dato. Una vez obtenido el centroide más cercano para cada dato, se clasifican los mismos según este dato:\n",
+    "\n",
+    "Los datos más cercanos al centroide 0, se consideran del cluster 0. Los datos más cercanos al centroide 1, se consideran del cluster 1 y así sucesivamente hasta clasificar datos en el cluster K. (Un cluster, puede quedar vacío si no hay datos que cumplan este criterio).\n",
+    "\n",
+    "Una vez realizada esta primera clasificación, el algoritmo recalcula el centroide como la media entre todos los datos que pertenecen a un mismo cluster. Luego, nuevamente recalcula las distancias de cada dato a cada centroide, los clasifica en clusters y vuelve a iterar. Este proceso se repite hasta que el centroide recalculado permanece \"estático\" en un rango de tolerancia.\n",
+    "\n",
+    "Como resultado, el algoritmo tomó un conjunto inicial de datos y los agrupó según su cercanía geométrica (distancia euclidea a un centroide determinado en este caso), dando así K clusters, con cierta cantidad de datos, que se consideran similares entre sí bajo este criterio. Es decir, son datos que pertenecen a un cluster, donde la varianza entre ellos, es la mínima."
    ]
   },
   {
@@ -571,6 +589,47 @@
     "# plt.grid()\n",
     "\n",
     "plt.title(\"Fronteras de decisión - Modelo EM\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "307a03b9",
+   "metadata": {},
+   "source": [
+    "## Sobre el algoritmo EM\n",
+    "\n",
+    "Dicho algoritmo, supone que los datos provienen de distintas distribuciones normales (una para cada cluster), que juntas forman una mezcla de gaussianas.\n",
+    "\n",
+    "Dado que las gaussianas deben integrar o sumar 1, se les asigna un peso. Luego, la probabilidad de obtener el dato $x_i$ dado que se conocen los parámetros $\\Theta$, para una mezcla de gaussianas, es:\n",
+    "\n",
+    "$$\n",
+    "P(x_i \\mid \\Theta) = \\sum_{k=1}^{K} \\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "$$\n",
+    "\n",
+    "Sin embargo, no se conocen los parámetros, solo los datos, por lo que, es necesario maximizar la verosimilitud, que es la probabilidad $P(X|\\Theta)$ donde los $\\Theta$ son las variables, es decir, son los parámetros que permiten que sea más probable observar los datos utilizados. Dicha expresión vale si se parte de la suposición de que los datos son independientes e idénticamente distribuidos:\n",
+    "\n",
+    "$$\n",
+    "L(\\Theta) = P(X \\mid \\Theta) = \\prod_{i=1}^{N} P(x_i \\mid \\Theta)\n",
+    "$$\n",
+    "\n",
+    "Dada la complejidad de derivar la verosimilitud (para maximizar), se utiliza el logaritmo de la misma, que permite descomponer la productoria en una sumatoria, más fácil de derivar:\n",
+    "\n",
+    "$$\n",
+    "\\log L(\\Theta) \n",
+    "= \\log P(X \\mid \\Theta) \n",
+    "= \\sum_{i=1}^{N} \\log P(x_i \\mid \\Theta)\n",
+    "= \\sum_{i=1}^{N} \\log \\left( \\sum_{k=1}^{K} \\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k) \\right)\n",
+    "$$\n",
+    "\n",
+    "Luego, el algoritmo EM, consta de 2 pasos para estimar estos parámetros desconocidos\n",
+    "\n",
+    "Paso E:\n",
+    "\n",
+    "Este primer paso, el algoritmo calcula la probabilidad de que la muestra $x_i$ pertenezca al cluster k, dados los parámetros actuales. Donde en primera instancia, las medias de cada cluster, son los centroides obtenidos con K-Means y las varianzas se obtienen mediante los datos pertenecientes a cada cluster. Una vez calculada dicha probabilidad, es normalizada para que sume 1.\n",
+    "\n",
+    "Paso M:\n",
+    "\n",
+    "Tras la estimación de la probabilidad de que la muestra $x_i$ pertenezca al cluster k, dados los parámetros actuales. Se actualizan los pesos, la media y la covarianza, basándose en dicha probabilidad, con el fin de hallar los parámetros que mejor se ajustan a las mismas. Una vez calculados, se calcula la log-verosimilitud para analizar la convergencia del modelo y el ciclo vuelve a comenzar, nuevamente recalculando la probabilidad condicional, con los nuevos parámetros y actualizandolos. Dicho bucle termina cuando la log-verosimilitud no varía en un rango de tolerancia."
    ]
   },
   {
