'TP8 - terminado el modelo de lenguaje'

--- a/TPs/TP8/TP8_SARMIENTO_104241.ipynb
+++ b/TPs/TP8/TP8_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "5bc784e9",
    "metadata": {},
    "outputs": [],
@@ -27,18 +27,27 @@
    "id": "c30cb410",
    "metadata": {},
    "source": [
-    "# Exploración del dataset"
+    "# Modelo de Lenguaje"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19da4fac",
+   "metadata": {},
+   "source": [
+    "## Funciones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "4bd7f20f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Funciones\n",
+    "# Funciones\n",
     "\n",
+    "# Retorna el texto dado, con los espacios unificados y en minúsculas\n",
     "def processing_text (text):\n",
     "\n",
     "    #Se separan las palabras por espacios\n",
@@ -48,23 +57,186 @@
     "    text_unified = \" \".join(words_list) \n",
     "\n",
     "    #Se pasan los caracteres a minuscula\n",
-    "    text.lower()\n",
+    "    text_unified = text_unified.lower()\n",
     "\n",
     "    return text_unified\n",
-    "\n"
+    "\n",
+    "\n",
+    "# Retorna la similitud coseno entre los vectores u y v\n",
+    "def SC (u,v) :\n",
+    "    abs_u = np.linalg.norm(u)\n",
+    "    abs_v = np.linalg.norm(v)\n",
+    "\n",
+    "    prod = u@v\n",
+    "\n",
+    "    return prod/(abs_u * abs_v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e427137",
+   "metadata": {},
+   "source": [
+    "## Clases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "239b8b50",
+   "execution_count": 48,
+   "id": "d4c6d1a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'anime.csv'\n",
-    "df = pd.read_csv(filename)\n",
+    "# Clases\n",
     "\n",
-    "language_model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-mpnet-base-v2')"
+    "class semantic_search ():\n",
+    "        \n",
+    "    def __init__(self, model_name='sentence-transformers/paraphrase-multilingual-mpnet-base-v2'):\n",
+    "\n",
+    "        #Modelo de lenguaje a usar\n",
+    "        self.model = SentenceTransformer(model_name)\n",
+    "\n",
+    "        #Embeddings del texto\n",
+    "        self.embeddings = None\n",
+    "        self.texts = None\n",
+    "\n",
+    "    def fit(self, text_list):\n",
+    "        #Se carga la lista de strings\n",
+    "        self.texts = text_list\n",
+    "\n",
+    "        print('self.texts', len(self.texts))\n",
+    "\n",
+    "        #Se computan los embeddings de la lista de strings dadas\n",
+    "        self.embeddings = self.model.encode(self.texts)\n",
+    "\n",
+    "        print('self.embeddings', self.embeddings.shape)\n",
+    "\n",
+    "    def search(self, query, k=5):\n",
+    "\n",
+    "        #Se computa el embedding del texto buscado\n",
+    "        query_emb = self.model.encode(query)\n",
+    "\n",
+    "        print('query_emb:',query_emb.shape)\n",
+    "\n",
+    "        #Se calcula la similitud coseno entre cada embedding del texto almacenado y el del solicitado\n",
+    "        sims = np.array([SC(e, query_emb) for e in self.embeddings])\n",
+    "\n",
+    "        print('sims', sims.shape)\n",
+    "\n",
+    "        #Se ordenan de mayor a menor los primeros k indices de los embeddings similares\n",
+    "        idxs = np.argsort(sims)[::-1][:k]\n",
+    "\n",
+    "        print(idxs.shape)\n",
+    "\n",
+    "        #Se obtienen los primeros k textos y similitudes, ordenadas de mayor a menor\n",
+    "        ranked_texts = [self.texts[i] for i in idxs]\n",
+    "        ranked_sims = np.array([sims[i] for i in idxs])\n",
+    "\n",
+    "        #Se retornan por separado los textos y las similitudes\n",
+    "        return ranked_texts, ranked_sims"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1db4753a",
+   "metadata": {},
+   "source": [
+    "## Procesamiento de datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e14840",
+   "metadata": {},
+   "source": [
+    "#### Carga de datos y preprocesamiento de los mismos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "bec87145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df: (10, 1001)\n",
+      "df: (10, 1001)\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'anime.csv'\n",
+    "df = pd.read_csv(filename, sep=',', nrows=10)\n",
+    "\n",
+    "print('df:', df.shape)\n",
+    "\n",
+    "#Se obtienen los titulos\n",
+    "titles = df['title']\n",
+    "\n",
+    "#Se procesan los titulos para eliminar espacios y pasar todo a minusculas\n",
+    "titles_processed = [processing_text(titles[i]) for i in range(df.shape[0])]\n",
+    "\n",
+    "#Se vuelven a cargar los titulos en la columna de titulos del df\n",
+    "df['title'] = titles_processed\n",
+    "\n",
+    "print('df:', df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4276d541",
+   "metadata": {},
+   "source": [
+    "#### Modelo de lenguaje"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "239b8b50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self.texts 10\n",
+      "self.embeddings (10, 768)\n",
+      "query_emb: (768,)\n",
+      "sims (10,)\n",
+      "(10,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "language_model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-mpnet-base-v2')\n",
+    "\n",
+    "# El modelo toma el texto, lo separa en tokens y reemplaza cada token por un ID entero del vocabulario que posee\n",
+    "# Tras esto, realiza un 'pooling', que puede ser un promedio, para dar el array final de 1x768\n",
+    "embeddig_att =language_model.encode(processing_text('Attack on Titan'))\n",
+    "\n",
+    "#Se inicializa el modelo de búsqueda semántica\n",
+    "ss_model = semantic_search()\n",
+    "\n",
+    "#Se entrena el modelo de búsqueda semántica, utilizando los títulos\n",
+    "ss_model.fit(df['title'].to_list())\n",
+    "\n",
+    "#Se obtienen los 15 titulos más semejantes al query 'Giant' y su similitud coseno\n",
+    "texts,sims = ss_model.search(query = 'Giant', k=15)\n",
+    "\n",
+    "# print('texts', len(texts))\n",
+    "# print('sims', sims.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "523c3b1d",
+   "metadata": {},
+   "source": [
+    "# Sistema de recomendación"
    ]
   }
  ],
